2010-06-11  Andrew Jorgensen  <ajorgensen@novell.com>

	* WebServices.wsdl:
	* WebServices.asmx.cs: Add upload_files and working_directory
	  attributes for a command

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Gracefully handle the case when a lane's revisions do
	not match with the revisions of the lanes that lane is depending on.

2010-05-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Authentication.cs: Authenticate: don't crash with a null login.

2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.wsdl: Regenerated.

2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.wsdl: Regenerated.

2010-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.wsdl: Regenerated.

	* WebServices.asmx.cs: GetViewLaneData: Added support for excluding hidden
	files from the returned data.

2010-01-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.wsdl: Regenerated.

	* WebServices.asmx.cs: Added FindRevisionForLane.

2009-12-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Fix Min/Max confusion (thanks to Jonathan Pobst
	for finding it).

2009-12-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Updated authentication methods with new readonly
	parameter, and for the buildbot methods use the readonly mode.

	* Download.aspx.cs: No need to store credentials here, use the readonly
	mode.

	* Authentication.cs: Updated authentication methods with new readonly
	parameter.

2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Authentication.cs: Don't throw exception on invalid credentials,
	act as if no credentials was specified.

2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Reformat with VS to have consistent tabs in here.

2009-10-07  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: When determining if a hostlane has pending work,